--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 			<li>Soda</li>
 			<li>Butter</li>
 			<li>Pancakes Mix</li>
+			<li>Peppers</li>
+			<li>watermelon</li>
 		</ul>
 	</body>
 </html>
