Added git add .! to Peppers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			<li>Soda</li>
 			<li>Butter</li>
 			<li>Pancakes Mix</li>
-			<li>Peppers</li>
+			<li>Peppers!!!!</li>
 		</ul>
 	</body>
 </html>
